tests/type/errors/bad_assign1.xi
foo(x:int) {
    x = false
}